...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Category-->
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController title="Category" id="9pv-A4-QxB" customClass="CategoryViewController" customModule="Sephora" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                        <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
            </objects>
            <point key="canvasLocation" x="-472" y="2883"/>
        </scene>
        <!--Scan-->
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController title="Scan" id="8rJ-Kc-sve" customClass="ScanViewController" customModule="Sephora" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                        <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
